core/tests/ui/store/relation_invalid_attribute_rejected.stderr
error: unsupported relation attribute
 --> tests/ui/store/relation_invalid_attribute_rejected.rs:4:12
  |
4 | #[relation(other = "edge_name")]
  |            ^^^^^
