core/tests/ui/store/relation_invalid_attribute_rejected.rs
use appdb::Relation;

#[derive(Relation)]
#[relation(other = "edge_name")]
struct InvalidRelation;

fn main() {}
